# serializer version: 1
# name: test_switch[switch.test_pet_live_tracking-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_pet_live_tracking',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Live tracking',
    'platform': 'tractive',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'live_tracking',
    'unique_id': 'pet_id_123_live_tracking',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.test_pet_live_tracking-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Pet Live tracking',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_pet_live_tracking',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[switch.test_pet_tracker_buzzer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_pet_tracker_buzzer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Tracker buzzer',
    'platform': 'tractive',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'tracker_buzzer',
    'unique_id': 'pet_id_123_buzzer',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.test_pet_tracker_buzzer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Pet Tracker buzzer',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_pet_tracker_buzzer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch[switch.test_pet_tracker_led-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.test_pet_tracker_led',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Tracker LED',
    'platform': 'tractive',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'tracker_led',
    'unique_id': 'pet_id_123_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch[switch.test_pet_tracker_led-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Pet Tracker LED',
    }),
    'context': <ANY>,
    'entity_id': 'switch.test_pet_tracker_led',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
